# CO_project

./: CMakeLists.txt  graph.json  main.c
backtracking_approach/: backtracking.c  backtracking.h
genetic_alg_approach/: genetic.c  genetic.h
greedy_approach/: greedy.c  greedy.h
greedy_aproach/: greedy.c  greedy.h
greedy_randomized_approach/: greedy_randomized.c  greedy_randomized.h
json/: cJSON.c
